adiciona imagem de fundo

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -9,6 +9,7 @@
     <script src='js/main.js'></script>
 </head>
 <body>
+    <div class="carnival"></div>
     <div class="vending-machine"></div>
     <div class="bt-a"></div>
     <div class="bt-b"></div>
