Ajustes de responsividade

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -13,7 +13,7 @@
     <script src='js/main.js'></script>
 </head>
 <body onload="setText()">
-    <div id="reset" class="doto-900" onclick="resetGame()">REINICIAR JOGO</div>
+    <div id="reset" class="doto-900" onclick="resetGame()">REINICIAR MÁQUINA</div>
     <div id="carnival"></div>
     <div id="vending-machine"></div>
     <div id="bt-a" onclick="setDoce('A')"></div>
